2005-02-07 Duncan Coutts <duncan@coutts.uklinux.net>

	* tools/apiGen/ModuleScan.hs: new module that scans the existing
	module source files to pick out useful information so that we can
	use that information to improve the generated modules.

	* tools/apiGen/ApiGen.hs: take advantage of the new ModuleScan
	information in the various module headder fields. Add a new
	--scanmodules flag.

	* tools/apiGen/Template.chs: add author and copyright variable.

	* tools/apiGen/Makefile: use the new --scanmodules feature.

	* tools/apiGen/StringUtils.hs: add extra utility function.

	* mk/common.mk: Add $(EXEEXT) when trying to build c2hsLocal. Set
	HSTOOLFLAGS = -H350m -M400m for the release so more people can build
	ok. On windows we need more memory for some reaons so set
	HSTOOLFLAGS = -H400m -M650m 

	* configure.ac: Add $(EXEEXT) to C2HS name. Do define WIN32 afterall
	since ghc does not define it (though gcc does so it'll give a warning)
	Bumb the version to 0.9.7.1_rc1

2005-02-06 Duncan Coutts <duncan@coutts.uklinux.net>

	* configure.ac: win32 fixes. Do not define WIN32 on windows since it
	is already defined o that platform. Define a conditional so that
	Makefile.am can conditonally compile a few modules. We no longer need
	to pass -fnative-struct to gcc on windows.

	* Makefile.am: win32 fixes. Add $(EXEEXT) in a few places to so names
	of dependencies are correct on windows. Only compile the plug and
	socket modules on non-win32 platforms.

	* tools/c2hs/toplevel/C2HSConfig.hs.in: comment out the @TMPDIR@
	substitution since it causes problems in windows and is not used
	anyway.

	* tools/c2hs/c/CParser.hs: make c2hs accept __attribute__'s on
	declerations of functions returning pointer types. This is needed for
	some mingw header file.

2005-02-05 Duncan Coutts <duncan@coutts.uklinux.net>

	* tools/apiGen/ApiGen.hs: add support for interfaces, deal with
	examples in a more general way and improve the generation of
	properties.
